# nova-act-hitl

./: .gitignore  README.md
sdk/common/: README.md  pyproject.toml
sdk/common/src/amzn_nova_act_human_intervention_common/: __init__.py
sdk/common/src/amzn_nova_act_human_intervention_common/config/: __init__.py  logging_config.py
sdk/common/src/amzn_nova_act_human_intervention_common/models/: __init__.py  common_models.py  dynamodb_models.py  executor_models.py  intervention_models.py  request_models.py  step_function_models.py  type_definitions.py
sdk/common/src/amzn_nova_act_human_intervention_common/utils/: __init__.py  aws_sigv4_signer.py  utils.py
sdk/common/tests/: __init__.py
sdk/common/tests/models/: test_common_models.py  test_dynamodb_models.py  test_step_function_models.py
sdk/common/tests/utils/: test_aws_sigv4_signer.py  test_utils.py
sdk/service/: README.md  pyproject.toml
sdk/service/src/amzn_nova_act_human_intervention/: __init__.py
sdk/service/src/amzn_nova_act_human_intervention/constants/: __init__.py  constants.py
sdk/service/src/amzn_nova_act_human_intervention/executors/: __init__.py  base.py  factory.py
sdk/service/src/amzn_nova_act_human_intervention/executors/streams/: __init__.py  handlers.py
sdk/service/src/amzn_nova_act_human_intervention/executors/websocket/: __init__.py  handlers.py  service.py
sdk/service/src/amzn_nova_act_human_intervention/models/: __init__.py  response.py  spa_params.py
sdk/service/src/amzn_nova_act_human_intervention/notifications/: __init__.py  base.py  email_notifier.py  exceptions.py  notification_factory.py  slack_message_builder.py  slack_notifier.py
sdk/service/src/amzn_nova_act_human_intervention/utils/: __init__.py  s3_utils.py  time_utils.py  websocket.py
sdk/service/src/amzn_nova_act_human_intervention/workflows/: authorizer.py  base_handlers.py
sdk/service/src/amzn_nova_act_human_intervention/workflows/approval/: __init__.py
sdk/service/src/amzn_nova_act_human_intervention/workflows/approval/api/: __init__.py  handlers.py
sdk/service/src/amzn_nova_act_human_intervention/workflows/approval/sfn/: __init__.py  handlers.py
sdk/service/src/amzn_nova_act_human_intervention/workflows/ui_takeover/api/: handlers.py
sdk/service/src/amzn_nova_act_human_intervention/workflows/ui_takeover/sfn/: handlers.py
sdk/service/tests/executors/: test_base.py  test_factory.py
sdk/service/tests/executors/streams/: __init__.py  test_handlers.py
sdk/service/tests/executors/websocket/: test_handlers.py  test_service.py  test_service_manager.py
sdk/service/tests/notifications/: test_base.py  test_email_notifier.py  test_integration.py  test_notification_factory.py  test_slack_message_builder.py  test_slack_notifier.py
sdk/service/tests/utils/: test_s3_utils.py  test_time_utils.py  test_websocket.py
sdk/service/tests/workflows/: test_authorizer.py  test_base_handlers.py
sdk/service/tests/workflows/approval/: __init__.py
sdk/service/tests/workflows/approval/api/: __init__.py  test_handlers.py
sdk/service/tests/workflows/ui_takeover/api/: test_handlers.py
sdk/service/tests/workflows/ui_takeover/sfn/: test_handlers.py
(+52 files in other folders)
