[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amzn-nova-act-human-intervention"
dynamic = ["version"]
readme = "README.md"
dependencies = [
    "aws-lambda-powertools == 3.7.0",
    "boto3 >= 1.40.39",
    "botocore >= 1.40.39",
    "pydantic >= 2.10.6",
    "bedrock-agentcore == 1.0.5",
    "slack-bolt == 1.25.0",
    "jinja2 == 3.1.6",
    "amzn-nova-act-human-intervention-common"
]
requires-python = ">=3.10"

[tool.hatch.version]
path = "src/amzn_nova_act_human_intervention/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-mock",
    "pytest-xdist",
]

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "--color=yes",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["./build", ".hatch", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["amzn_nova_act_human_intervention"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
files = [ "src/**/*.py" ]
